--- a/index.html
+++ b/index.html
@@ -1,14 +1,24 @@
-<html>
 <!DOCTYPE html>
 <html lang="pt-br">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Projeto github</title>
+    <title>Página de Marten Alexandre da Rosa</title>
+    <style>
+        body {
+            background-color: white;
+            font-family: Arial, sans-serif;
+            text-align: center;
+            padding-top: 50px;
+        }
+        h1 {
+            color: #333;
+        }
+    </style>
 </head>
 <body>
-    <h1> Marten Rosa</h1>
-</body>
-</html>
 
+    <h1>Marten Alexandre da Rosa</h1>
+
+</body>
 </html>
