commit att html

--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
     <title>Página de Marten Alexandre da Rosa</title>
     <style>
         body {
-            background-color: white;
+            background-color: black;
             font-family: Arial, sans-serif;
             text-align: center;
             padding-top: 50px;
@@ -18,7 +18,10 @@
 </head>
 <body>
 
-    <h1>Marten Alexandre da Rosa</h1>
+    <h1>Seja bem vindo a minha página HTML</h1>
+    <h6>Marten Alexandre da Rosa</h6>
+    <p>Tecnólogo em Análise e Desenvolvimento de Sistemas </p>
+
 
 </body>
 </html>
